# seguimiento_ssl_prueba

./: MANIFEST.in  README.rst  requirements.txt  setup.cfg
seguimientolite_hyundai_mx/: admin.py  apps.py  models.py  pdf_calidad.py  pdf_cotizacion.py  pdf_cotizacion_simplificado.py  services.py  urls.py  utils.py  views.py
seguimientolite_hyundai_mx/migrations/: 0001_initial.py  0002_vistas.py  0003_vistas2.py  0004_auto_20240124_1046.py
seguimientolite_hyundai_mx/static/seguimientolite_hyundai_mx/css/: error.css  neutron.css  sidebar.css
seguimientolite_hyundai_mx/static/seguimientolite_hyundai_mx/jquery-3.6.1/: jquery.min.map
seguimientolite_hyundai_mx/static/seguimientolite_hyundai_mx/js/: validacion.js
seguimientolite_hyundai_mx/templates/kpis_hyundai_mx/: financiero.html  general.html  general_detalle.html  resumen.html
seguimientolite_hyundai_mx/templates/registration/: login.html
seguimientolite_hyundai_mx/templates/seguimientolite_hyundai_mx/: adicionales_detalle.html  asesor.html  asesor_detalle.html  base.html  calidad.html  calidad_detalle.html  cliente_detalle.html  correo.html  error_404.html  historial.html  historial_detalle.html  login.html  mail-template.html  mano_de_obra_detalle.html  pantalla_recepcion.html  refacciones.html  refacciones_detalle.html  tecnico.html
seguimientolite_hyundai_mx/templatetags/: cliente_tools.py  svg_functions.py
