[metadata]
name = seguimientolite-hyundai-mexico
version = 1.15.7
description = Seguimiento en linea para Hyundai Mexico.
long_description = file: README.rst
url = https://github.com/Development-CN/seguimientolite-hyundai-mx.git
author = Eglenelid Gamaliel Gutierrez Hernandez
author_email = gamaliel.gutierrez@capnet.com.mx
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    django == 4.2
    djangorestframework
    django-drf-filepond
    django-crispy-forms
    django-excel-response
    django-webpush
    django-pwa
    reportlab
    requests
    pillow
    PyPDF2
    numpy
    pycryptodome
